--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -4,6 +4,7 @@
 
   --card-font-size: calc(var(--card-width) / 2);
   --card-border-radius: 0.35em;
+  --card-backface-padding: 0.5em;
 
   --card-fanout-gap-face-down: calc(var(--card-height) / 10);
   --card-fanout-gap-face-up: calc(var(--card-height) / 5);
@@ -114,12 +115,14 @@
 .card .back:after {
   content: "";
   position: absolute;
-  top: 0.25em;
-  left: 0.25em;
-  width: calc(100% - 0.5em);
-  height: calc(100% - 0.5em);
+  top: calc(var(--card-backface-padding) / 2);
+  left: calc(var(--card-backface-padding) / 2);
+  width: calc(100% - var(--card-backface-padding));
+  height: calc(100% - var(--card-backface-padding));
 
-  border-radius: calc(var(--card-border-radius) - 0.125em);
+  border-radius: calc(
+    var(--card-border-radius) - (var(--card-backface-padding) / 4)
+  );
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.5);
 
   box-sizing: border-box;
@@ -165,9 +168,24 @@
   background: linear-gradient(135deg, #ffffff, #eeeeee);
 }
 
+@media screen and (max-width: 600px) {
+  .card .front {
+    flex-direction: column;
+  }
+}
+
 .card .corner {
+  display: flex;
+  flex-direction: column;
   font-size: calc(var(--card-font-size) / 4);
   text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .card .corner {
+    font-size: calc(var(--card-font-size) / 3);
+    flex-direction: row;
+  }
 }
 
 .card .corner.bottom-right {
